[package]
name = "test-contract"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["contract"]
contract = []
library = []

[dependencies]
cosmwasm-std = "1.5.11"
cosmwasm-derive = "1.5.11"
cw-storage-plus = "1.2.0"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-schema = "1.5.11"

